[package]
name = "resw"
version = "0.4.0"
authors = ["Robert Masen <r@robertmasen.pizza>"]
edition = "2018"
description = "A library for writing RESSA AST parts to a file"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/rusty-ecma/RESW"

[dependencies]
resast = "0.4.1"
log = "0.4"
ress = "0.9"

[dev-dependencies]
rayon = { version = "1"}
ressa = "0.7.0"
pretty_env_logger = "0.3"

[features]
default = []
moz_central = []
