[package]
name = "resw"
version = "0.7.0-alpha.1"
authors = ["Robert Masen <r@robertmasen.pizza>"]
edition = "2018"
description = "A library for writing RESSA AST parts to a file"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/rusty-ecma/RESW"

[dependencies]
resast = "0.6.0-alpha.3"
log = "0.4"
ress = "0.11"

[dev-dependencies]
rayon = { version = "1"}
# ressa = "0.9.0-alpha.1"
ressa = { git = "https://github.com/rusty-ecma/RESSA", branch = "feat/smaller-ast" }
pretty_env_logger = "0.4"
thiserror = "1"

[features]
default = []
moz_central = []
