[package]
name = "resw"
version = "0.7.0-alpha.2"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
edition = "2018"
description = "A library for writing RESSA AST parts to a file"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/rusty-ecma/RESW"

[dependencies]
resast = "0.6.0-alpha.5"
log = "0.4"
ress = "0.11"

[dev-dependencies]
rayon = { version = "1"}
ressa = "0.9.0-alpha.3"
pretty_env_logger = "0.4"
thiserror = "1"

[features]
default = []
moz_central = []
